<resources>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unvavorite</string>
    <string name="comment">Comment</string>
    <string name="related">Related</string>
    <string name="browser">Browser</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="action_all">Show all</string>
    <string name="action_read">Show read</string>
    <string name="action_unread">Show unread</string>
    <string name="action_favorites">Show favorites</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="no_data_available">No results in the list.</string>
    <string name="send_email">Send email</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="back">Back</string>
    <string name="any">Any</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="keywords">Keywords</string>
    <string name="empty_posts">No posts to show</string>
    <string name="empty_notifications">No notifications to show</string>
    <string name="related_items">Related Items</string>
    <string name="comments">Comments</string>
    <string name="notifications">Notifications</string>
    <string name="search_filter">Search filter</string>
    <string name="action_popular">Show popular</string>
    <string name="new_posts">new posts</string>
    <string name="updated_posts">updated posts</string>
    <string name="popular_posts">popular posts added</string>
    <string name="new_messages">new messages</string>
    <string name="updated_messages">updated messages</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="subscribe_newsletter">Get newsletter</string>
    <string name="send_feedback">Send me feedback</string>
    <string name="rate_app">Rate my app</string>
    <string name="tell_friend">Tell a friend</string>
    <string name="designed_by">Designed by…</string>
    <string name="other">Other</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="read_tutorial">Read tutorial</string>
    <string name="newsletters">Newsletters</string>
    <string name="messages">Messages</string>
    <string name="workwithme">Work with Me</string>
</resources>
