<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_browser"
        android:title="@string/browser"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_related"
        android:title="@string/related"
        android:icon="@drawable/ic_dashboard_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_comment"
        android:title="@string/comment"
        android:icon="@drawable/ic_chat_bubble_outline_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always" />
</menu>
