<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_all"
                    android:checked="true"
                    android:title="@string/action_all"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_newsletters"
                    android:title="@string/newsletters"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_messages"
                    android:title="@string/messages"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>
