<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#CC000000">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/more_favorite"
                    android:src="@drawable/more_favorite"
                    android:layout_width="115dp"
                    android:layout_height="115dp" />
                <TextView
                    android:id="@+id/more_favorite_label"
                    android:text="@string/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp" />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/more_mark_as_read"
                    android:src="@drawable/more_mark_as_read"
                    android:layout_width="115dp"
                    android:layout_height="115dp" />
                <TextView
                    android:id="@+id/more_mark_as_read_label"
                    android:text="@string/mark_as_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/more_browser"
                    android:src="@drawable/more_browser"
                    android:layout_width="115dp"
                    android:layout_height="115dp" />
                <TextView
                    android:text="@string/browser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_gravity="center" />
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/more_share"
                    android:src="@drawable/more_share"
                    android:layout_width="115dp"
                    android:layout_height="115dp" />
                <TextView
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>